--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Right aligned main content -->
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook showing SEO concepts." class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -39,7 +39,7 @@
             </p>
         </div>
 
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Laptop with graphs showing increasing reputation." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -47,7 +47,7 @@
             </p>
         </div>
 
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="People working on table with social media terms." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
