--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <!-- Left aligned aside -->
-    <div class="benefits">
+    <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Gear funneling into dollar sign." />
@@ -81,14 +81,14 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
-    </div>
+    </aside>
 
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 
 </body>
 
