--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div class="navigation">
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
