replaced hero div with img

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <!-- Background splash -->
-    <div class="mainBackground"></div>
+    <img src="assets/images/digital-marketing-meeting.jpg" id="mainBackground"></img>
 
     <!-- Right aligned main content -->
     <div class="content">
